--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -13,9 +13,8 @@ Delete the line below if you're just getting started and want to remove the welc
 
 {% block content %}
 
-{% comment %}
-Delete the line below if you're just getting started and want to remove the welcome screen!
-{% endcomment %}
-{% include 'home/welcome_page.html' %}
+<h1>{{ page.title }}</h1>
+<h2>{{ page.subtitle }}</h2>
+
 
 {% endblock content %}
