--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
-{% load static %}
+{% load static wagtailcore_tags %}
 
 {% block body_class %}template-homepage{% endblock %}
 
@@ -15,6 +15,10 @@ Delete the line below if you're just getting started and want to remove the welc
 
 <h1>{{ page.title }}</h1>
 <h2>{{ page.subtitle }}</h2>
+
+<div>
+    {{ page.rtfbody|richtext }}
+</div>
 
 
 {% endblock content %}
