--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -21,7 +21,8 @@ Delete the line below if you're just getting started and want to remove the welc
 <a href="{{ bgimage.url }}">Ссылка на картинку с alt {{ bgimage.alt }}</a>
 
 <div>
-    {{ page.rtfbody|richtext }}
+    {% include_block page.body %}
+   <!-- {{ page.rtfbody|richtext }}-->
 </div>
 
 
